--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 <body>
 <h1>first question</h1>
 <!--zhushi-->
-<p id="s1">word sen1</p>
+<p id="s1">word sen1 clone test</p>
 <p>word sen2 version1</p>
 <hr>
 <p>word sen3 wwwwwwwwwwwwwww</p>
